[GTK] Fix compile warnings in PlatformImageCairo.cpp https://bugs.webkit.org/show_bug.cgi?id=171850

Reviewed by Michael Catanzaro.

* ImageDiff/cairo/PlatformImageCairo.cpp:
(ImageDiff::PlatformImage::createFromStdin):
(ImageDiff::PlatformImage::writeAsPNGToStdout):


Canonical link: https://commits.webkit.org/188990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216795 268f45cc-cd09-0410-ab3c-d52691b4dbfc